[package]
name = "track-time"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["cargo", "derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = { version = "1.3.0", features = ["v4"] }
notify = "5.1.0"
ctrlc = "3.2.5"
serde = { version = "1.0.154", features = ["derive"] }
config-file = "0.2.3"
